<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/home"
        app:cnb_textColor = "#ac81e8"
        app:cnb_backgroundColor = "@color/white"
        app:cnb_iconColor = "#ac81e8"/>

    <item android:id="@+id/nav_schuele"
        android:title="@string/nav_schedule"
        android:icon="@drawable/scheule"
        app:cnb_textColor = "#ac81e8"
        app:cnb_backgroundColor = "@color/white"
        app:cnb_iconColor = "#ac81e8"/>

    <item android:id="@+id/nav_setting"
        android:title="@string/nav_setting"
        android:icon="@drawable/setting"
        app:cnb_backgroundColor = "@color/white"
        app:cnb_textColor = "#ac81e8"
        app:cnb_iconColor = "#ac81e8"/>

    <item android:id="@+id/nav_account"
        android:title="@string/nav_account"
        android:icon="@drawable/account"
        app:cnb_textColor = "#ac81e8"
        app:cnb_backgroundColor = "@color/white"
        app:cnb_iconColor = "#ac81e8"/>
</menu>