<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SupportEngineerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lt_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#E8E8E8"
        android:visibility="gone"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progress_bar"
            android:layout_width="64dp"
            android:layout_marginTop="24dp"
            android:layout_height="64dp"
            app:SpinKit_Color="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:elevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/friends" />

    <LinearLayout
        android:id="@+id/layout_student_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16sp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/bg_img_back"/>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_weight="2"
            android:layout_marginEnd="4dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/txt_xuat_ho_tro" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:elevation="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="@id/layout_student_list"
        app:layout_constraintTop_toBottomOf="@id/layout_student_list"
        app:layout_constraintEnd_toEndOf="@id/layout_student_list"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/txt_support_name" />

        <EditText
            android:id="@+id/edt_sp_en_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginTop="4dp"
            android:padding="12dp"
            android:background="@drawable/bg_edt_sp_en"
            android:textSize="20sp"
            android:textColor="#ff424242"
            android:inputType="text"
            android:textColorHint="@color/grey"
            android:hint="@string/txt_support_hint_name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="8dp"
        app:layout_constraintStart_toStartOf="@id/layout1"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:layout_constraintEnd_toEndOf="@id/layout1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/txt_support_position" />

        <EditText
            android:id="@+id/edt_sp_en_position"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginTop="4dp"
            android:padding="12dp"
            android:textColor="#ff424242"
            android:textColorHint="@color/grey"
            android:background="@drawable/bg_edt_sp_en"
            android:textSize="20sp"
            android:inputType="text"
            android:hint="@string/txt_support_hint_position" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="@id/layout2"
        app:layout_constraintTop_toBottomOf="@id/layout2"
        app:layout_constraintEnd_toEndOf="@id/layout2"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/txt_support_require" />

        <EditText
            android:id="@+id/edt_sp_en_require"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:ems="10"
            android:layout_marginTop="4dp"
            android:padding="12dp"
            android:textColorHint="@color/grey"
            android:maxLines="5"
            android:textColor="#ff424242"
            android:background="@drawable/bg_edt_sp_en"
            android:textSize="20sp"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/txt_support_hint_require" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:elevation="8dp"

        app:layout_constraintStart_toStartOf="@id/layout3"
        app:layout_constraintTop_toBottomOf="@id/layout3"
        app:layout_constraintEnd_toEndOf="@id/layout3"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:alpha="0.8"
            android:textStyle="bold"
            android:text="Note:" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:text="@string/txt_support_note" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_send_require"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_support_send"
        android:textSize="20sp"
        android:elevation="8dp"
        android:background="@drawable/ng_search_btn"
        app:backgroundTint = "@null"
        android:layout_marginBottom="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>