<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:elevation="8dp"
    android:background="@drawable/bg_update_dialog">

    <LinearLayout
        android:id="@+id/lt_change_pw_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="12dp"
        android:visibility="gone"
        android:orientation="vertical"
        android:background="@drawable/bg_item_schuele"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/darkGrey"
            android:text="@string/txt_notification_title"/>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/change_pw_progress"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/darkGrey"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            style="@style/img_color_back"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_st_avatar"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:elevation="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:src="@drawable/avatar"/>
        <TextView
            android:id="@+id/txt_st_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:text="Trịnh Hoàng Long"/>


        <EditText
            android:id="@+id/edt_st_password_old"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:textSize="21sp"
            android:layout_marginTop="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="#ff424242"
            android:padding="12dp"
            android:background="@drawable/bg_update_edt"
            android:inputType="text"
            android:textColorHint="@color/grey"
            android:hint="@string/txt_hint_old_pw" />

        <EditText
            android:id="@+id/edt_st_password_new"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:textSize="21sp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:padding="12dp"
            android:textColor="#ff424242"
            android:background="@drawable/bg_update_edt"
            android:inputType="text"
            android:textColorHint="@color/grey"
            android:hint="@string/txt_hint_new_pw" />

        <EditText
            android:id="@+id/edt_st_password_new_again"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:textSize="21sp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:padding="12dp"
            android:textColor="#ff424242"
            android:background="@drawable/bg_update_edt"
            android:inputType="text"
            android:textColorHint="@color/grey"
            android:hint="@string/txt_hint_again_new_pw" />

        <Button
            android:id="@+id/btn_st_update"
            android:layout_width="196dp"
            android:layout_height="48dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/ng_search_btn"
            app:backgroundTint = "@null"
            android:text="@string/btn_dialog_search_update"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>