<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting.SettingActivity">

    <LinearLayout
        android:id="@+id/layout_student_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="1dp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/bg_img_back"/>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginEnd="24dp"
            android:text="@string/nav_setting" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_student_list"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp">

            <Button
                android:id="@+id/btn_setting_change_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_st_btn"
                app:backgroundTint = "@null"
                android:textColor="@color/bg_setting_text_btn"
                android:textSize="24sp"
                android:alpha="0.8"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableEnd="@drawable/change_in4"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/btn_setting_pw" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/btn_setting_change_avatar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_st_btn"
                app:backgroundTint = "@null"
                android:textColor="@color/bg_setting_text_btn"
                android:textSize="24sp"
                android:alpha="0.8"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableEnd="@drawable/change_picture"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/btn_setting_avatar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/btn_setting_dark"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_st_btn"
                app:backgroundTint = "@null"
                android:textColor="@color/bg_setting_text_btn"
                android:textSize="24sp"
                android:alpha="0.8"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/btn_setting_dark" />

            <Switch
                android:id="@+id/sw_dark_to_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumbTint="#ac81e8"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/btn_setting_change_inf4"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_st_btn"
                app:backgroundTint = "@null"
                android:textColor="@color/bg_setting_text_btn"
                android:textSize="24sp"
                android:alpha="0.8"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableEnd="@drawable/change_word"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/btn_setting_in4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/btn_setting_change_language"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_st_btn"
                app:backgroundTint = "@null"
                android:textColor="@color/bg_setting_text_btn"
                android:textSize="24sp"
                android:alpha="0.8"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/btn_setting_language" />

            <TextView
                android:id="@+id/txt_st_change_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="20sp"
                android:textColor="@color/violet"
                android:textStyle="bold"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_show_change_language"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/btn_setting_logout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_st_btn"
                app:backgroundTint = "@null"
                android:textColor="@color/bg_setting_text_btn"
                android:textSize="24sp"
                android:alpha="0.8"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawableEnd="@drawable/logout"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/btn_setting_logout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>